--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
+    "@vue/test-utils": "^1.0.4",
     "poi": "^9.0.0",
     "poi-preset-bundle-report": "^2.0.0",
     "serve": "^6.1.0",
