--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "poi build",
     "report": "poi build --bundle-report",
     "serve": "serve dist --single",
-    "test": "tyu"
+    "test": "tyu -- --watch"
   },
   "author": {
     "name": "David Andersson",
